2006-04-21 Yen-Ju Chen <yjchenx at gmail>

	* Port render/instance.
	* Remove glib from render/
	* Port ObSessionState into AZSessionState.

2006-04-20 Yen-Ju Chen <yjchenx at gmail>

	* Port RrAppearance int AZAppearance (so far so good).
	* Remove glib from render.h to expose hidden usages of glib 
	  in many places.
	* Fix compilation.
	* Update to OpenBox3 CVS.
	* Use fix-size type just in case.
	(never tests on 64-bit machine because I don't have one :).

2006-04-19 Yen-Ju Chen <yjchenx at gmail>

	* Removeo pango from render/font.

2006-04-17 Yen-Ju Chen <yjchenx at gmail>

  	* Remove glib from openbox.m.
  	* Remove glib from AZMainLoop.
  	* Remove glib from AZMenuManager.
	* Revmoe most glib from AZClient.m.
	* Revmoe most glib from parse.

2006-04-16 Yen-Ju Chen <yjchenx at gmail>

	* Use c type in prop.
	* Remove glib from action and config.
	* Add missing COPYING.

2006-04-15 Yen-Ju Chen <yjchenx at gmail>

	* Initial port of parse.
	* Port ObParseInst into AZParser.
	* Use NSString in parse_string.
	* Use Invocation for callback.
	* Finish up invocation.
	* Remove glib from client_list_menu.

2006-04-14 Yen-Ju Chen <yjchenx at gmail>

	* Revert back to an older version
	  because newer one break the move/resize initialied by menu 
	  then mouse movement.
	* Remove ref in AZAction.
	* Port mouse.
	* Remove most of glib in AZKeyboardHandler.
	* Remove glib in AZMouseHandler.
	* Remove glib in translate.

2006-04-13 Yen-Ju Chen <yjchenx at gmail>

	* Use NSMutableArray for focus_order;
	* port ObAction into AZAction.

2006-04-10 Yen-Ju Chen <yjchenx at gmail>

	* Port menu entry (So far so good).
	* Port ObMenu (Still good).
	* Port client_menu and client_list_menu.
	* Hide focus_order in preparation to port.

2006-04-08 Yen-Ju Chen <yjchenx at gmail>

	* move parse one-level up.
	* port keyboard.
	* use notification when client is destroyed.

2006-04-07 Yen-Ju Chen <yjchenx at gmail>

        * Working on AZStacking.
	* Hope to tam the beast.